fixed the navbar issue. Fixed the formatting of the edit and new report pages. Added a collapse for the new race portion of the reports forms

--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -1,6 +1,6 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
-fieldset, label { margin: 0; padding: 0; }
+fieldset, label { margin: 0; padding: 0};
 
 /****** Style Star Rating Widget *****/
 
@@ -8,6 +8,7 @@ fieldset, label { margin: 0; padding: 0; }
   border: none;
   float: top;
 }
+
 
 .rating > input { display: none; }
 .rating > label:before {
@@ -31,10 +32,10 @@ fieldset, label { margin: 0; padding: 0; }
 /***** CSS Magic to Highlight Stars on Hover *****/
 
 .rating > input:checked ~ label, /* show gold star when clicked */
-/*.rating:not(:checked) > label:hover, /* hover current star */
-/*.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */*/*/
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
 
-/*.rating > input:checked + label:hover, /* hover current star when changing rating */
-/*.rating > input:checked ~ label:hover,*/
-/*.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-/*.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }*/
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
